--- a/1.Gestao de Servico Web/default.conf
+++ b/1.Gestao de Servico Web/default.conf
@@ -7,6 +7,7 @@ server {
     server_name #colocar aqui o endereço (seu dominio) cadastrado no DNS;
     listen 443;
     access_log /var/log/nginx/access.log;
+    return 301 https://$host$request_uri;
     location / {
         proxy_pass http://novo-servico;
     }
